# src/common/types/http.ts
@@ -1,5 +1,26 @@
 import type { StatusCodes } from 'http-status-codes';
 
+export type AuthenticatedUser = {
+    id: string;
+    email: string;
+    firstName: string;
+    lastName: string;
+    username: string;
+    roles: {
+        name: string;
+        permissions: {
+            name: string;
+        }[];
+    }[];
+};
+
+type PaginationMetadata = {
+    page: number;
+    limit: number;
+    total: number;
+    totalPages: number;
+};
+
 export type HttpResponse<TData> = TData extends undefined
     ? {
           message: string;
@@ -10,3 +31,12 @@ export type HttpResponse<TData> = TData extends undefined
           code: StatusCodes;
           data: TData;
       };
+
+export type HttpPaginateResponse<TData> = HttpResponse<TData> & {
+    pagination: PaginationMetadata;
+};
+
+export interface PaginationQuery {
+    page?: number;
+    limit?: number;
+}
