# src/dto/auth.ts
@@ -1,6 +1,7 @@
 import { Expose } from 'class-transformer';
 import z from 'zod';
-import { loginSchema } from '../schema';
+import { loginSchema, registerSchema } from '../schema';
+import { UserResponse } from './user';
 
 export class AuthResponse {
     @Expose()
@@ -11,3 +12,6 @@ export class AuthResponse {
 }
 
 export type LoginRequest = z.infer<typeof loginSchema>;
+
+export type RegisterRequest = z.infer<typeof registerSchema>;
+export type RegisterResponse = UserResponse;
