# src/schema/user.schema.ts
@@ -1,9 +1,16 @@
 import z from 'zod';
 
-export const userSchema = z.object({
+export const createUserSchema = z.object({
+    password: z.string().min(1, 'Password is required'),
     firstName: z.string().min(1, 'Name is required'),
     lastName: z.string().optional(),
     email: z.email().min(1, 'Email is required'),
     username: z.string().min(1, 'Username is required'),
-    password: z.string().min(1, 'Password is required'),
+});
+
+export const updateUserSchema = z.object({
+    firstName: z.string().min(1, 'Name is required'),
+    lastName: z.string().optional(),
+    email: z.email().min(1, 'Email is required'),
+    username: z.string().min(1, 'Username is required'),
 });
